--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ figure img {
     .player-grid {
         width: 100%;
         padding: 20px;
+        margin: 0;
         box-sizing: border-box;
     }
     .dice-area {
